--- a/index.html
+++ b/index.html
@@ -11,41 +11,41 @@
   <div id="container">
     <div id="calculator">
       <div id="display">
-        00000000
+        00000000.
       </div>
       <div id="logo">
         TI-108
       </div>
       <div id="buttons">
         <div class="row">
-          <button id="negate" class="red-button">+/-</button>
-          <button class="red-button">√</button>
-          <button class="red-button">%</button>
-          <button class="red-button">/</button>  
+          <div id="negate" class="red-button">+/-</div>
+          <div class="red-button">√</div>
+          <div class="red-button">%</div>
+          <div class="red-button">/</div>  
         </div>
         <div class="row">
-          <button class="white-button">7</button>
-          <button class="white-button">8</button>
-          <button class="white-button">9</button>
-          <button class="red-button">*</button>  
+          <div class="white-button">7</div>
+          <div class="white-button">8</div>
+          <div class="white-button">9</div>
+          <div class="red-button">*</div>  
         </div>
         <div class="row">
-          <button class="white-button">4</button>
-          <button class="white-button">5</button>
-          <button class="white-button">6</button>
-          <button class="red-button">-</button>  
+          <div class="white-button">4</div>
+          <div class="white-button">5</div>
+          <div class="white-button">6</div>
+          <div class="red-button">-</div>  
         </div>
         <div class="row">
-          <button class="white-button">1</button>
-          <button class="white-button">2</button>
-          <button class="white-button">3</button>
-          <button class="red-button">+</button>  
+          <div class="white-button">1</div>
+          <div class="white-button">2</div>
+          <div class="white-button">3</div>
+          <div class="red-button">+</div>  
         </div>
         <div class="row">
-          <button class="red-button">C</button>
-          <button class="white-button">0</button>
-          <button class="white-button">.</button>
-          <button class="red-button">=</button>  
+          <div class="red-button">C</div>
+          <div class="white-button">0</div>
+          <div class="white-button">.</div>
+          <div class="red-button">=</div>  
         </div>
       </div>
     </div>
