--- a/index.html
+++ b/index.html
@@ -13,8 +13,16 @@
       <div id="display">
         00000000.
       </div>
-      <div id="logo">
-        TI-108
+      <div id="break">
+        <div id="solar">
+          <div class="solar"></div>
+          <div class="solar"></div>
+          <div class="solar"></div>
+          <div class="solar"></div>
+        </div>
+        <div id="logo">
+          TI-108
+        </div>
       </div>
       <div id="buttons">
         <div class="row">
@@ -50,5 +58,6 @@
       </div>
     </div>
   </div>
+  <script src="calculator.js"></script>
 </body>
 </html>
