--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div id="container">
     <div id="calculator">
       <div id="display">
-        00000000.
+        
       </div>
       <div id="break">
         <div id="solar">
@@ -26,34 +26,34 @@
       </div>
       <div id="buttons">
         <div class="row">
-          <div id="negate" class="red-button">+/-</div>
-          <div class="red-button">√</div>
-          <div class="red-button">%</div>
-          <div class="red-button">/</div>  
+          <div class="button red-button" data-button="neg">+/-</div>
+          <div class="button red-button" data-button="sqrt">√</div>
+          <div class="button red-button" data-button="prcnt">%</div>
+          <div class="button red-button edge" data-button="/">/</div>
         </div>
         <div class="row">
-          <div class="white-button">7</div>
-          <div class="white-button">8</div>
-          <div class="white-button">9</div>
-          <div class="red-button">*</div>  
+          <div class="button white-button" data-button="7">7</div>
+          <div class="button white-button" data-button="8">8</div>
+          <div class="button white-button" data-button="9">9</div>
+          <div class="button red-button edge" data-button="*">*</div>
         </div>
         <div class="row">
-          <div class="white-button">4</div>
-          <div class="white-button">5</div>
-          <div class="white-button">6</div>
-          <div class="red-button">-</div>  
+          <div class="button white-button" data-button="4">4</div>
+          <div class="button white-button" data-button="5">5</div>
+          <div class="button white-button" data-button="6">6</div>
+          <div class="button red-button edge" data-button="-">-</div>
         </div>
         <div class="row">
-          <div class="white-button">1</div>
-          <div class="white-button">2</div>
-          <div class="white-button">3</div>
-          <div class="red-button">+</div>  
+          <div class="button white-button" data-button="1">1</div>
+          <div class="button white-button" data-button="2">2</div>
+          <div class="button white-button" data-button="3">3</div>
+          <div class="button red-button edge" data-button="+">+</div>
         </div>
         <div class="row">
-          <div class="red-button">C</div>
-          <div class="white-button">0</div>
-          <div class="white-button">.</div>
-          <div class="red-button">=</div>  
+          <div class="button red-button" data-button="clr">C</div>
+          <div class="button white-button" data-button="0">0</div>
+          <div class="button white-button" data-button=".">.</div>
+          <div class="button red-button edge" data-button="=">=</div>
         </div>
       </div>
     </div>
