--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       </div>
       <div id="buttons">
         <div class="row">
-          <div class="button red-button" data-button="neg">+/-</div>
+          <!-- <div class="button red-button" data-button="neg">+/-</div>
           <div class="button red-button" data-button="sqrt">√</div>
-          <div class="button red-button" data-button="prcnt">%</div>
-          <div class="button red-button edge" data-button="/">/</div>
+          <div class="button red-button" data-button="prcnt">%</div> -->
+          <div class="button red-button edge" id="equals" data-button="=">=</div>
         </div>
         <div class="row">
           <div class="button white-button" data-button="7">7</div>
@@ -41,7 +41,7 @@
           <div class="button white-button" data-button="4">4</div>
           <div class="button white-button" data-button="5">5</div>
           <div class="button white-button" data-button="6">6</div>
-          <div class="button red-button edge" data-button="-">-</div>
+          <div class="button red-button edge" data-button="/">/</div>
         </div>
         <div class="row">
           <div class="button white-button" data-button="1">1</div>
@@ -53,7 +53,7 @@
           <div class="button red-button" data-button="clr">C</div>
           <div class="button white-button" data-button="0">0</div>
           <div class="button white-button" data-button=".">.</div>
-          <div class="button red-button edge" data-button="=">=</div>
+          <div class="button red-button edge" data-button="-">-</div>
         </div>
       </div>
     </div>
