--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
       </div>
       <div id="buttons">
         <div class="row">
-          <!-- <div class="button red-button" data-button="neg">+/-</div>
-          <div class="button red-button" data-button="sqrt">√</div>
-          <div class="button red-button" data-button="prcnt">%</div> -->
-          <div class="button red-button edge" id="equals" data-button="=">=</div>
+          <div class="button red-button" id="equals" data-button="=">=</div>
+          <div class="button red-button" data-button="neg">+/-</div>
+          <div class="button red-button edge" data-button="prcnt">%</div>
         </div>
         <div class="row">
           <div class="button white-button" data-button="7">7</div>
